Fix regex, path and etc